updated Bill, BillServiceImpl,  BillController, JwtRequestFilter and UserPrincipal classes