@@ -5,12 +5,14 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class UserPrincipal implements UserDetails {
     private final Long id;
     private final String email;
-    private final String password;   // ✅ ADD THIS
+    private final String password;
     private final List<String> roles;
 
     public UserPrincipal(Long id, String email, String password, List<String> roles) {
@@ -31,19 +33,19 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public String getPassword() {
-        return password; // ✅ MUST return encoded password
+        return password;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
+        if (roles == null) return Collections.emptyList();
         return roles.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .toList();
+                .map(role -> new SimpleGrantedAuthority(role.startsWith("ROLE_") ? role : "ROLE_" + role))
+                .collect(Collectors.toList());
     }
 
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
     @Override public boolean isEnabled() { return true; }
-
 }
